<resources>
    <string name="app_name">EduTrackId</string>
    <string name="aboutme">My Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="room_chatting">SOSMED FOR TEACHER</string>
    <string name="room_learning">TEACHER LEARNING SOURCE</string>
    <string name="room_information">SHARE INFORMATION </string>
    <string name="room_profile">ABOUT ME </string>
    <string name="room_gallery">MY GALLERY </string>
    <string name="room_setting">SETTINGS </string>
    <string name="info_baru">INFO TERBARU : Pelatihan untuk guru-guru Madrasah Tsanawiyah </string>

    <string name="lbl_room_chatting">SOSMED FOR TEACHER</string>
    <string name="lbl_room_learning">TEACHER LEARNING</string>
    <string name="lbl_room_information">SHARE INFORMATION </string>
    <string name="lbl_room_profile">ABOUT ME </string>
    <string name="lbl_room_gallery">MY GALLERY </string>
    <string name="lbl_room_setting">SETTINGS </string>

    <string name="gallery">GALLERY </string>
    <string name="upload">UPLOAD IMAGE </string>

    <string name="add_learning">ADD LEARNING </string>
    <string name="detail_learning">DETAIL LEARNING </string>

    <string name="add_information">ADD INFORMATION </string>

    <string name="middle_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>

    <!-- Strings related to login and registration -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_country">Country</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="btn_login">Login</string>
    <string name="btn_reset">Reset</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_country">Enter the country</string>
    <string name="err_msg_city">Enter the city</string>
    <string name="inv_msg_password">Minimum length 5</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_sign_up">REGISTER</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="title_activity_login">Sign in</string>



    <string name="hint_nipd">NIPD</string>
    <string name="hint_phone">Phone</string>

    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>

    <string name="submit">Submit</string>

</resources>
