<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg1"
    tools:context=".Dashboard">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_home"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/noimagefound"/>
            <TextView
                android:id="@+id/txt_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="20dp"
                android:shadowColor="@color/btn_login"
                android:shadowDx="3"
                android:shadowDy="2"
                android:shadowRadius="8"
                android:text="guru@gmail.com"/>
            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="15dp"
                android:shadowColor="@color/btn_login"
                android:shadowDx="3"
                android:shadowDy="2"
                android:shadowRadius="8"
                android:text="Emirullah, S.Pd.i"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/fab_margin"
                android:weightSum="2"
                android:layout_marginRight="16px"
                android:layout_marginLeft="16px">
                <LinearLayout
                    android:id="@+id/btn_krs"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:background="@drawable/dashboard">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/chatting" />
                    <TextView
                        android:id="@+id/txt_krs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/room_chatting"
                        android:textSize="12sp"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_learning"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:background="@drawable/dashboard">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/learning" />
                    <TextView
                        android:id="@+id/proposal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/room_learning"
                        android:textSize="12sp"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>


            </LinearLayout>

            <!-- Second Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginRight="16px"
                android:layout_marginLeft="16px">

                <LinearLayout
                    android:id="@+id/btn_share"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:background="@drawable/dashboard">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/share_information" />
                    <TextView
                        android:id="@+id/txt_kehadiran"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/room_information"
                        android:textSize="12sp"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_about"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:background="@drawable/dashboard">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/profile" />
                    <TextView
                        android:id="@+id/txt_payment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="6dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/room_profile"
                        android:textSize="12sp"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

            </LinearLayout>
            <!-- End Second Row-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="16px"
                android:layout_marginLeft="16px">

                <LinearLayout
                    android:id="@+id/btn_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/dashboard">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_baru"
                        android:textSize="12sp"
                        android:padding="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

            </LinearLayout>
            <!-- Third Row-->

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/dashboard"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:text="INFORMASI TERBARU"/>

        <TextView
            android:id="@+id/marque_scrolling_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="2dp"
            android:clickable="true"

            android:textColor="@color/white"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="Pelaksanaan Ujian Akhir Semester dilaksanakan di bulan Oktober 2018"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            android:id="@+id/sliding_text_marquee"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:text="Scrolling Text (Marquee) in Android Application"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>